# quantitative_develop_intern

./: README.md
amz_data-main/: README.md
backtest_optimization_c-main/: .gitignore  NAMING_CONVENTION.md  README.md  algorithm_doc.md  interface_spec.md  opt.md  performance_benchmark.md  task_spec.md
ctp_c-main/: README.md
live_futures-main/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
live_futures-main/scripts/: brokers.json.example  data_recorder.py  data_recorder.sh  manual_trader.py
live_futures-main/src/trader_livefut/configs/: settings.py
live_futures-main/src/trader_livefut/execution/: trading_client.py
live_futures-main/src/trader_livefut/gateways/: ctp_base.py  ctp_client.py  ctp_quote.py  ctp_trader.py
live_futures-main/src/trader_livefut/models/: base_market_data.py  base_tick_data.py  bookSnapshotData.py  old_order_book.py  order_book.py
live_futures-main/src/trader_livefut/utils/: utils_gen.py  utils_logging.py  utils_marketdate.py
live_futures-main/tests/: test_subscribe.py
live_monitor-main/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AmazingData-1.0.12-cp312-none-any.whl  CHANGELOG.md  Makefile  README.md  auto.sh  docker-compose.yml  index_weight_data.csv
minio_api-main/: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
minio_api-main/example/: get_data.py  get_localdata.py  get_minute_data.py  get_tick_data.py  test_downloader.py  test_permission.py  test_uploader.py
minio_api-main/src/minio_api/: __init__.py  adj_utils.py  client.py  config.py  downloader.py  localdata.py  minute_client.py  schemas.py  tick_client.py  uploader.py  utils.py
newstreamer-main/: .env  README.md  requirements.txt  setup.py  (+1 more)
(+165 files in other folders)
